--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*", "custom.d.ts"],
+  "include": ["src/**/*", "custom.d.ts", "server/utils/parse-date.js", "server/utils/parse-date.js", "server/utils/number-to-two-digits.js", "server/utils/number-to-two-digits.js", "server/utils/messages.js", "server/utils/messages.js"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
 
