--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
+    "debug": "node --inspect src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
