--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "serve-static": "^1.15.0",
     "socket.io-client": "^4.6.1",
     "style-loader": "^3.3.1"
